--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn[standard]
-supabase
-anthropic
-pydantic
-pydantic[email]
-python-dotenv
-python-multipart
-groq
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+supabase==2.9.1
+anthropic==0.39.0
+pydantic==2.10.3
+email-validator==2.1.0
+python-dotenv==1.0.1
+python-multipart==0.0.12
+groq==0.11.0
