--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ pydantic==2.10.3
 email-validator==2.1.0
 python-dotenv==1.0.1
 python-multipart==0.0.12
-groq==0.11.0
+groq>=0.11.0
 langchain-groq
 pydantic_settings
 python-dotenv
